list of bugs raised by zara is completed

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=217.21.87.103
-DB_USER=u746981494_gldroptaxi
-DB_PASSWORD=yXmWi7/Y7@
-DB_NAME=u746981494_gldroptaxi
+DB_USER=u746981494_zara
+DB_PASSWORD=*ulowldNTR0V
+DB_NAME=u746981494_zara
 API_KEY=AIzaSyCEiOz8EAsl9BKfoDIXJ1Rog0ruZL7hMq4
